k8s/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varhavix-ingress
  namespace: varhavix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.varhavix.com
      secretName: varhavix-tls
  rules:
    - host: app.varhavix.com
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vx-landing-ui
                port:
                  number: 80
          - path: /lms(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vx-lms-ui
                port:
                  number: 80
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vx-admin-ui
                port:
                  number: 80
          - path: /api/v1/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vx-gateway
                port:
                  number: 80
